# airbridge-backend

./: .coverage  .env.example  .env.test  .gitignore  CLAUDE.md  CONTRIBUTING.md  CURSOR_SETUP.md  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci-placeholder.yml
alembic/: env.py
alembic/versions/: 0002_social_auth_fields.py  0003_add_events_table.py  0004_add_airports_table.py  0005_add_trip_push_fields.py  0006_add_trip_push_count.py  0007_enable_rls_all_tables.py  0008_add_apple_user_id.py  0009_sprint6_columns.py  0010_feedback_tracking_columns.py  0011_sprint7_trip_flight_columns.py  0012_trip_flight_info_status.py  (+1 more)
scripts/: backfill_flight_snapshots.py  check_test_pollution.py  generate_tsa_baselines.py  seed_airports.py
tests/: conftest.py  test_active_trip.py  test_aerodatabox_errors.py  test_apple_auth.py  test_auth.py  test_auth_middleware.py  test_backfill_script.py  test_coordinates.py  test_db_isolation.py  test_devices.py  test_email_service.py  test_events.py  test_feedback.py  test_health.py  test_notifications.py  test_parking_segment.py  test_passive_tracking.py  test_phase3_trip_detail.py  test_polling_backoff.py  test_polling_phase2.py  test_recommendations.py  test_recompute_prefetched.py  test_route_search.py  test_sms_service.py  test_snapshot_from_columns.py  test_social_auth.py  test_subscriptions.py  test_track_populate.py  test_trial.py  test_trip_history.py  test_trip_state.py  test_trip_update.py  test_trips.py  test_tsa_blending.py  test_untrack.py  test_users.py  test_version.py
(+66 files in other folders)
